# RevolutionChatWeb

./: accounts.json  aiCorpus.yml  aiModel.py  api.py  auth.py  automatedSystem.json  classes.py  db.sqlite3  intents.json  invites.json  main.py  privateServers.json  pyproject.toml  replit.nix  replit_zip_error_log.txt  requirements.txt  roles.json  servers.json  serviceWorker.js  site-data.json  users.json
Flask-Websockets/Flask_Websockets.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
assets/application_tokens/: 1.json  2.json  3.json
messages/dms/: 132462973622.json  136095402428.json  151440928492.json  151549096260.json  182063871714.json  183553771380.json  25670945183.json  44448962740.json  49386864845.json  71985321521.json  78894805780.json
messages/servers/: 124036345040~chat.json  29601156379~chat.json  dev~chat.json  dev~day-chat.json  dev~eric-petting.json  dev~staff-party.json  dev~the-legend.json  ericworld~chat.json  minecraft~chat.json  revolution~announcements.json  revolution~chat.json
pages/: API_docs.html  authorize_app.html  betaClient.html  developer.html  home.html  ld.html  lemail.html  login_account.html  login_app.html  login_app_authorize_desktop.html  new_app_loader.html  printjson.html  register_app.html  revolvedai.html  safety.html  servers.html  system_msg_client.html  user_settings.html  ws.html
pages/developers/: portal.html
pages/legacy/: add_a_user.html  client.html  (+4 more)
static/: account-stealing-or-hacking-policy.txt  manifest.webmanifest  privacy-policy.txt  terms-of-use.txt  version.json  ws.html
(+43 files in other folders)
